[KRDB] Read kdeglobals font and fallback to hardcoded default if neccessary

kcminit is non-desktopSettingsAware (for performance) which will keep it from loading
our platform theme. This also means that QFontDatabase also won't know our font settings.

Based on a patch by jingyu9575, thanks.

BUG: 378262